--- a/index.html
+++ b/index.html
@@ -104,13 +104,11 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <!-- <h3>UI/UX Designer &amp; Web Developer.</h3> -->
             <p>
-              I am a postdoctoral research fellow at Princeton University funded by national and university fellowships from NSERC, Princeton University, and the Center for Information Policy. I am supervised by <a href="https://www.andresmh.com/" target="_blank">Dr. Andrés Monroy-Hernández</a> in the Department of Computer Science. My research in <strong>human-computer interaction</strong> focuses on building systems that foster social connection for children through <em>learning</em>, <em>playing</em>, <em>communicating</em>, and <em>creating</em>.</p>
+              I am a postdoctoral researcher at George Mason University in the NLP Lab, working with <a href="https://cs.gmu.edu/~antonis/author/antonios-anastasopoulos/" target="_blank">Antonis Anastasopoulos</a>. My research lies at the intersection of human–computer interaction and language technologies, with a focus on designing systems that support social connection, learning, and creative expression, particularly for children and families.
 
-              As a member of the <a href="https://hci.princeton.edu" target="_blank">Princeton HCI lab </a>, I work on <strong>Capybara</strong>. Capybara is a mobile app that empowers children and teenagers to create in Augmented Reality. I completed my PhD at the University of Toronto in the Department of Computer Science. My research lab was <a href="http://taglab.utoronto.ca" target="_blank">TAGlab</a> , where I was supervised by <a href="http://www.cs.utoronto.ca/~mcosmin/" target="_blank">Dr. Cosmin Munteanu</a> . For my PhD thesis, I developed a web-based storybook creation platform, <strong>StoryTapestry</strong>, to support immigrant grandparents and grandchildren in sharing culture and language with each other. </p>
+              More broadly, I study how sociotechnical systems can be grounded in real-world contexts to support meaningful human relationships across age, culture, and distance.</p>
 
-              <!-- My Master's degree was also completed under the supervision of Dr. Cosmin Munteanu. In my thesis, I developed a framework for understanding the needs and motivations of new immmigrants learning to write in English. Working directly with my participants, I developed, deployed, an evaluated a tool that provided timely feedback to English language learners by leveraging peer-support.  -->
-
-              <p>More generally, I am interested in how we can cross traditional disciplinary domains to create tools grounded in real-world contexts. Across academia and industry, I have worked in the fields of computer science, education, business, and health. I am always seeking new opportunities, new domains, new methods, and new ways of thinking to create novel solutions for supporting the complex process of social connection. </p>
+          
             <!-- <div class="row">
               <div class="col-lg-8">
                 <ul>
